Updating round background

--- a/obs-overlay/layouts/Smash-board.html
+++ b/obs-overlay/layouts/Smash-board.html
@@ -135,7 +135,7 @@
 
     <div id="overlayRound">
       <img
-        src="Resources/Overlay/Scoreboard/Round BG new.png"
+        src="Resources/Overlay/Scoreboard/Round BG.png"
         id="roundBG"
         alt=""
       />
